--- a/hotels.html
+++ b/hotels.html
@@ -337,4 +337,33 @@
         </div>
       </article>
       <article class="card" tabindex="0">
-        <img src="https://source.unsplash.com/400x300/?
+        <img src="https://source.unsplash.com/400x300/?hotel,city" alt="City hotel exterior" />
+        <div class="card-content">
+          <h3>skyline stay</h3>
+          <div class="stars">★★★★★</div>
+          <div class="price">$399 / night</div>
+          <button class="book-btn" onclick="soldOut(this)">book now</button>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 floptropica travel. all rights flopped.</p>
+    <div class="footer-links" role="contentinfo">
+      <a href="#">terms</a> | <a href="#">privacy</a> | <a href="#">help</a>
+    </div>
+  </footer>
+
+  <script>
+    function soldOut(button) {
+      if (!button.disabled) {
+        button.insertAdjacentHTML('afterend', '<div class="sold-out">Sold Out</div>');
+        button.disabled = true;
+        button.style.background = '#ccc';
+        button.style.cursor = 'not-allowed';
+      }
+    }
+  </script>
+</body>
+</html>
