--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         </div>
       </article>
       <article class="card" tabindex="0">
-        <img src="https://source.unsplash.com/400x300/?tokyo" alt="Tokyo cityscape" />
+        <img src="https://images.unsplash.com/photo-1668392297073-d3dfcd81ae63" alt="Tokyo cityscape" />
         <div class="card-content">
           <h3>tokyo ➡️ floptropica</h3>
           <p>1 stop • $649</p>
