--- a/packages.html
+++ b/packages.html
@@ -203,7 +203,7 @@
 <body>
 
   <nav>
-    <a href="index.html">HOME</a>
+    <a href="/">HOME</a>
     <a href="flights.html">FLIGHTS</a>
     <a href="hotels.html">HOTELS</a>
     <a href="packages.html" aria-current="page">PACKAGES</a>
@@ -259,7 +259,7 @@
   <footer>
     <p>&copy; 2025 floptropica travel. all rights flopped.</p>
     <div class="footer-links" role="contentinfo">
-      <a href="#">terms</a> | <a href="#">privacy</a> | <a href="#">help</a>
+      <a href="#">terms</a> | <a href="privacy.html">privacy</a> | <a href="#">help</a>
     </div>
   </footer>
 
