--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 <body>
 
   <nav>
-    <a href="index.html" aria-current="page">HOME</a>
+    <a href="#" aria-current="page">HOME</a>
     <a href="flights.html">FLIGHTS</a>
     <a href="hotels.html">HOTELS</a>
     <a href="packages.html">PACKAGES</a>
