--- a/flights.html
+++ b/flights.html
@@ -321,7 +321,7 @@
   <footer>
     <p>&copy; 2025 floptropica travel. all rights flopped.</p>
     <div class="footer-links" role="contentinfo">
-      <a href="#">terms</a> | <a href="#">privacy</a> | <a href="#">help</a>
+      <a href="#">terms</a> | <a href="privacy.html">privacy</a> | <a href="#">help</a>
     </div>
   </footer>
 
