--- a/privacy.html
+++ b/privacy.html
@@ -206,7 +206,7 @@
     <a href="index.html">HOME</a>
     <a href="flights.html">FLIGHTS</a>
     <a href="hotels.html">HOTELS</a>
-    <a href="packages.html" aria-current="page">PACKAGES</a>
+    <a href="packages.html">PACKAGES</a>
     <a href="about.html">ABOUT</a>
   </nav>
 
